--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -69,18 +69,17 @@
    "outputs": [],
    "source": [
     "# Create a Beautiful Soup object\n",
-    "html = browser.html\n"
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n"
+    "# Extracting all the text elements"
    ]
   },
   {
